Complete STLA Desktop Learning Platform with professional README